[gd_scene load_steps=26 format=3 uid="uid://bkk8jxmcw8q4x"]

[ext_resource type="Environment" uid="uid://dhylrgs4ypi2c" path="res://ui/menu_env.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://chbhpadk5nbgi" path="res://maps/hub_1.tscn" id="4"]
[ext_resource type="Script" uid="uid://dg84es73nwecu" path="res://ui/title_screen.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://dialng5csue4b" path="res://ui/menu_button.tscn" id="5_mxtec"]
[ext_resource type="Texture2D" uid="uid://cfx7dfats6hl" path="res://assets/logo.png" id="6"]
[ext_resource type="AudioStream" uid="uid://c1ope7npae620" path="res://assets/Super Game Music - Badass Space Explorer (Loop).ogg" id="8"]
[ext_resource type="Theme" uid="uid://dxlqjk13q05vx" path="res://ui_theme.tres" id="9_2p3fk"]
[ext_resource type="PackedScene" uid="uid://by8fbbogtahlu" path="res://entities/player/player.blend" id="11_cwy8d"]
[ext_resource type="PackedScene" uid="uid://dprtyraxfvhk6" path="res://props/spaceship/spaceship.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://c1uxp84cy3fxb" path="res://ui/settings.tscn" id="13"]

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="5"]
resource_name = "menu_fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="10"]
resource_name = "menu_fade_in_fast"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="1"]
resource_name = "menu_fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Menu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pte50"]
_data = {
&"RESET": SubResource("4"),
&"menu_fade_in": SubResource("5"),
&"menu_fade_in_fast": SubResource("10"),
&"menu_fade_out": SubResource("1")
}

[sub_resource type="Animation" id="Animation_04i8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:sky_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="2"]
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:sky_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p04cd"]
_data = {
&"RESET": SubResource("Animation_04i8i"),
&"rotating_skybox": SubResource("2")
}

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spaceship:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spaceship:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5, 3.2, 9.3)]
}

[sub_resource type="Animation" id="7"]
resource_name = "coming_in"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spaceship:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.501, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-25, 0, 0), Vector3(-25, 0, 0), Vector3(-25, 0, 0), Vector3(0, 0, 0), Vector3(15, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spaceship:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(5, 3.2, 30.3181), Vector3(5, 3.2, 30.3181), Vector3(5, 3.2, 9.3)]
}

[sub_resource type="Animation" id="3"]
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spaceship:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spaceship:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(5, 3.2, 9.3), Vector3(5, 3.8, 9.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_477ag"]
_data = {
&"RESET": SubResource("6"),
&"coming_in": SubResource("7"),
&"flying_in_space": SubResource("3")
}

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/Spaceship/player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.15708, 0, 0)]
}

[sub_resource type="Animation" id="9"]
resource_name = "spin_y"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/Spaceship/player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.15708, 0, 0), Vector3(-0.15708, 12.5664, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6i7gw"]
_data = {
&"RESET": SubResource("8"),
&"spin_y": SubResource("9")
}

[node name="TitleScreen" type="Node"]
script = ExtResource("5")
new_game_scene = ExtResource("4")
menu_music = ExtResource("8")

[node name="AnimationPlayerMenu" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pte50")
}
autoplay = "menu_fade_in"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -295.5
offset_right = 520.0
offset_bottom = 295.5

[node name="Logo" type="TextureRect" parent="Control/Menu"]
layout_mode = 2
texture = ExtResource("6")
stretch_mode = 3

[node name="CenterRow" type="HBoxContainer" parent="Control/Menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Control/Menu/CenterRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" parent="Control/Menu/CenterRow/Buttons" instance=ExtResource("5_mxtec")]
unique_name_in_owner = true
layout_mode = 2
button_text = "NEW GAME"

[node name="ContinueButton" parent="Control/Menu/CenterRow/Buttons" instance=ExtResource("5_mxtec")]
unique_name_in_owner = true
layout_mode = 2
disabled = true
button_text = "CONTINUE"
button_disabled = true

[node name="SettingsButton" parent="Control/Menu/CenterRow/Buttons" instance=ExtResource("5_mxtec")]
unique_name_in_owner = true
layout_mode = 2
button_text = "SETTINGS"

[node name="ExitButton" parent="Control/Menu/CenterRow/Buttons" instance=ExtResource("5_mxtec")]
unique_name_in_owner = true
layout_mode = 2
button_text = "EXIT"

[node name="CenterContainer" type="CenterContainer" parent="Control/Menu/CenterRow"]
self_modulate = Color(1, 1, 1, 0.909091)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control/Menu/CenterRow/CenterContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="Control/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
theme = ExtResource("9_2p3fk")
text = "DEMO RELEASE"

[node name="DevelopedBy" type="Label" parent="Control/Menu"]
layout_mode = 2
size_flags_vertical = 5
theme = ExtResource("9_2p3fk")
text = "DEVELOPED BY TELMO \"TROOPER\""

[node name="Settings" parent="Control" instance=ExtResource("13")]
unique_name_in_owner = true
visible = false
layout_mode = 1
is_title_screen = true

[node name="Node3D" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node3D"]
environment = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(2.98023e-08, 0, -1, 0, 1, 0, 1, 0, 2.98023e-08, -13.2946, 6.29957, 0)
current = true

[node name="AnimationPlayerSkybox" type="AnimationPlayer" parent="Node3D"]
libraries = {
&"": SubResource("AnimationLibrary_p04cd")
}
autoplay = "rotating_skybox"
speed_scale = 0.2

[node name="AnimationPlayerSpaceship" type="AnimationPlayer" parent="Node3D"]
libraries = {
&"": SubResource("AnimationLibrary_477ag")
}
autoplay = "coming_in"

[node name="AnimationPlayerAlien" type="AnimationPlayer" parent="Node3D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_6i7gw")
}

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Node3D"]
transform = Transform3D(-0.183013, 0.965926, -0.183013, 0.683013, 0.258819, 0.683013, 0.707107, 0, -0.707107, 0, 0, 0)

[node name="Spaceship" parent="Node3D" instance=ExtResource("12")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3.2, 9.3)

[node name="player" parent="Node3D/Spaceship" instance=ExtResource("11_cwy8d")]
transform = Transform3D(1, 0, 0, 0, 0.987688, 0.156435, 0, -0.156435, 0.987688, 0, 1.4, 0)

[node name="Pupil (Hurt)" parent="Node3D/Spaceship/player" index="3"]
visible = false

[connection signal="animation_finished" from="AnimationPlayerMenu" to="." method="_on_AnimationPlayerMenu_animation_finished"]
[connection signal="pressed" from="Control/Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_menu_button_pressed" binds= ["new_game"]]
[connection signal="pressed" from="Control/Menu/CenterRow/Buttons/SettingsButton" to="." method="_on_menu_button_pressed" binds= ["settings"]]
[connection signal="pressed" from="Control/Menu/CenterRow/Buttons/ExitButton" to="." method="_on_menu_button_pressed" binds= ["exit"]]
[connection signal="gui_input" from="Control/Menu/CenterRow/CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="back_button_pressed" from="Control/Settings" to="." method="_on_Settings_back_button_pressed"]
[connection signal="animation_finished" from="Node3D/AnimationPlayerSpaceship" to="." method="_on_AnimationPlayerSpaceship_animation_finished"]

[editable path="Node3D/Spaceship/player"]
